--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
  </h1>
  Metas pessoais2024
 </h1>
+<h1 class="link">
+     <a href="metas.html"> link do cronometo de metas</a>
+      </h1>
   <ul>
     <Li>
         <h2>1ºmeta: tirar notas boas</h2>
