--- a/metas.html
+++ b/metas.html
@@ -18,6 +18,33 @@
             <button class="botao">conseguir um emprego aet</button>
         </div>
     </section>
+    <div class="abas-textos">
+        <div class="aba-conteudo">
+            <h3 class="aba-conteudo-titulo-principal"> tirar notas boas</h3>
+            <h4 class="aba-conteudo-titulo-secundario">ter mais atenção as aulas</h4>
+        </div>
+    </div>
+
+    <div class="abas-textos">
+        <div class="aba-conteudo">
+            <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
+            <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+        </div>
+    </div>
+
+    <div class="abas-textos">
+        <div class="aba-conteudo">
+            <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
+            <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+        </div>
+    </div>
+
+    <div class="abas-textos">
+        <div class="aba-conteudo">
+            <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
+            <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+        </div>
+    </div>
     <script src="main.js"></script>
 </body>
 
