--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <div class="botoes">
             <button class="botao ativo">Criar o habito de ler</button>
             <button class="botao">Passar de ano</button>
-            <button class="botao">Passar em Medicina</button>
-            <button class="botao">Começar a estudar espanhol</button>
+            <button class="botao">fazer academia</button>
+            <button class="botao">Começar a estudar ingles</button>
         </div>
     </h1>
     <ul>
@@ -25,7 +25,7 @@
             <h2>1º meta: Criar o habito de ler:</h2>
             <h3>Vai me trazer conhecimento, vai me ajudar a conhecer palavras novas, para atingir essa meta tenho que
                 criar o hábito de ler. </h3>
-            <h4>Prazo: até maio.</h4>
+            <h4>Prazo: até agosto.</h4>
         </li>
     </ul>
 
@@ -41,20 +41,19 @@
 
     <ul>
         <li>
-            <h2>3º meta: Passar em Medicina:</h2>
-            <h3>Se eu conseguir, vou realizar meu sonho, para isso tenho que estudar muito, me esforçar e confiar no meu
-                potencial.</h3>
-            <h4>Prazo: até dezembro.</h4>
+            <h2>3º meta:fazer academia:</h2>
+            <h3>ganhar massa</h3>
+            <h4>Prazo: até 2025.</h4>
         </li>
     </ul>
 
 
     <ul>
         <li>
-            <h2>4º meta: Começar a estudar espanhol:</h2>
+            <h2>4º meta: Começar a estudar ingles:</h2>
             <h3>Vai me ajudar muito, tanto em lugares que quero conhecer, quanto nos estudos. Tenho que estudar muito e
                 me esforçar.</h3>
-            <h4>Prazo: até agosto.</h4>
+            <h4>Prazo: até 2026.</h4>
         </li>
     </ul>
 </section>
